flexvol-demo/2-istio-services.yaml
# Istio Ingress Example for Project Jackson
#
# Authors:
# - Evan Louie <evan.louie@microsoft.com>
#
# Known Issues:
# - Ensure your Istio Gateway is using the correct selector for the Istio IngressGateway: (Gateways `spec.selector.istio` must match IstioGateway's `metadata.labels.istio`); As of v1.0.5, the included helm charts generate a mismatch.

---
# Generate a ClusterIP for the API
apiVersion: v1
kind: Service
metadata:
  name: jackson-api
  labels:
    app: jackson
spec:
  selector:
    app: spring-boot-api
  ports:
    - name: http
      port: 8080

---
# Generate a ClusterIP for the UI
apiVersion: v1
kind: Service
metadata:
  name: jackson-ui
  labels:
    app: jackson
spec:
  selector:
    app: spring-boot-ui
  ports:
    - protocol: TCP
      port: 8080

---
# Add routing rules for the existing Gateway included with Istio
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jackson-route-rules
spec:
  # https://istio.io/docs/reference/config/istio.networking.v1alpha3/#VirtualService
  gateways: # The default `mesh` value for when left blank is doesn't seem to propigate the rule properly. For now, always use a list of FQDN gateways
    - istio-autogenerated-k8s-ingress.istio-system.svc.cluster.local # must be FQDN if VirtualService in different NS than Gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            port:
              number: 8080
            host: jackson-api.default.svc.cluster.local
    - route: # This rule will pickup all other requests because it doesn't have a `match`
        - destination:
            port:
              number: 8080
            host: jackson-ui.default.svc.cluster.local
